--- a/Source/Apollo_MVC_FMX_Test.dproj
+++ b/Source/Apollo_MVC_FMX_Test.dproj
@@ -91,8 +91,7 @@
         </DelphiCompile>
         <DCCReference Include="tstApollo_MVC_FMX.pas"/>
         <DCCReference Include="Apollo_MVC_FMX.pas">
-            <Form>Form1</Form>
-            <FormType>fmx</FormType>
+            <Form>ViewFMXMain</Form>
         </DCCReference>
         <DCCReference Include="..\Vendors\Apollo_MVC_Core\Apollo_MVC_Core.pas"/>
         <BuildConfiguration Include="Release">
