--- a/Source/Apollo_MVC_FMX_Test.dproj
+++ b/Source/Apollo_MVC_FMX_Test.dproj
@@ -94,6 +94,7 @@
             <Form>ViewFMXMain</Form>
         </DCCReference>
         <DCCReference Include="..\Vendors\Apollo_MVC_Core\Apollo_MVC_Core.pas"/>
+        <DCCReference Include="..\Vendors\Apollo_Types\Apollo_Types.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
